// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BaseSpan component match expected snapshot 1`] = `
<span
  className=""
  style={Object {}}
>
  Test content
</span>
`;

exports[`BaseSpan component match expected snapshot 2`] = `
<span
  className="testClassName"
  style={
    Object {
      "color": "red",
    }
  }
>
  Test content
</span>
`;
